--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,6 @@ html {
     height: 100%;
     padding: 0;
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 body {
@@ -25,13 +22,18 @@ body {
     font-family: var(--e-global-font-family);
     color: var(--e-global-text-color);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
+
+/* Header style rules */
 header {
-    width: 92%;
+    width: 90%;
     height: 80px;
     display: flex;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 header div:nth-child(1) {
@@ -73,7 +75,7 @@ header ul:nth-child(3) {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 15%;
+    width: 10%;
     margin: 0;
     padding: 0;
 }
@@ -94,10 +96,56 @@ header ul:nth-child(3) li a:visited {
 }
 
 header ul:nth-child(4) {
-    width: 15%;
+    width: 10%;
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding: 0;
     margin: 0;
+}
+
+
+/* Hero section style rules */
+.hero-section{
+    width: 80%;
+    padding: 70px 10% 75px 10%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #FBFBFB;
+}
+
+.hero-section div:nth-child(1){
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-section div:nth-child(1) h2{
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 10px;
+}
+
+.hero-section div:nth-child(1) h2 img{
+    position: relative;
+    top: 15px;
+}
+
+.hero-section div:nth-child(1) h4{
+    color: #4A5568;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.hero-section div:nth-child(2){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.hero-section div:nth-child(2) img{
+    width: 100%;
 }
