--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ header ul:nth-child(4) {
 
 
 /* Hero section style rules */
-.hero-section{
+.hero-section {
     width: 80%;
     padding: 70px 10% 75px 10%;
     display: flex;
@@ -114,7 +114,7 @@ header ul:nth-child(4) {
     background-color: #FBFBFB;
 }
 
-.hero-section div:nth-child(1){
+.hero-section div:nth-child(1) {
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -122,30 +122,106 @@ header ul:nth-child(4) {
     align-items: center;
 }
 
-.hero-section div:nth-child(1) h2{
+.hero-section div:nth-child(1) h2 {
     font-size: 60px;
     font-weight: 700;
     line-height: 10px;
 }
 
-.hero-section div:nth-child(1) h2 img{
+.hero-section div:nth-child(1) h2 img {
     position: relative;
     top: 15px;
 }
 
-.hero-section div:nth-child(1) h4{
+.hero-section div:nth-child(1) h4 {
     color: #4A5568;
     font-size: 30px;
     font-weight: 400;
 }
 
-.hero-section div:nth-child(2){
+.hero-section div:nth-child(2) {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 50%;
 }
 
-.hero-section div:nth-child(2) img{
+.hero-section div:nth-child(2) img {
     width: 100%;
 }
+
+
+/* Featured Post Style */
+.posts-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 40px 0px 40px 0px;
+}
+
+.featured-post-wrapper {
+    width: 80%;
+    height: 250px;
+    display: flex;
+    background: #FFFFFF;
+    border: 1px solid #E2E2E2;
+    box-shadow: 0px 5px 4px rgba(221, 221, 221, 0.25);
+    border-radius: 5px;
+}
+
+.featured-post-wrapper>div:nth-child(2) {
+    width: 45%;
+    background-color: red;
+}
+
+.featured-post-wrapper>div:nth-child(2) img {
+    width: 100%;
+    height: 100%;
+}
+
+.featured-post-wrapper>div:nth-child(1) {
+    padding: 0px 55px;
+    width: 55%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.featured-post-wrapper>div:nth-child(1)>h2 {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    color: #2D3748;
+}
+
+.featured-post-wrapper>div:nth-child(1)>h6 {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    width: 80%;
+    color: #718096;
+}
+
+.featured-post-wrapper>div:nth-child(1)>div:nth-child(3) {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.post-meta-date {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #718096;
+}
+
+.post-btn-read-more-link {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 15px;
+    color: #2D3748;
+    text-decoration: none;
+}
+
