--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,13 +154,14 @@ header ul:nth-child(4) {
 /* Featured Post Style */
 .posts-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     padding: 40px 0px 40px 0px;
 }
 
-.featured-post-wrapper {
+.latest-post-wrapper {
     width: 80%;
     height: 250px;
     display: flex;
@@ -168,19 +169,19 @@ header ul:nth-child(4) {
     border: 1px solid #E2E2E2;
     box-shadow: 0px 5px 4px rgba(221, 221, 221, 0.25);
     border-radius: 5px;
+    margin-bottom: 45px;
 }
 
-.featured-post-wrapper>div:nth-child(2) {
+.latest-post-wrapper>div:nth-child(2) {
     width: 45%;
-    background-color: red;
 }
 
-.featured-post-wrapper>div:nth-child(2) img {
+.latest-post-wrapper>div:nth-child(2) img {
     width: 100%;
     height: 100%;
 }
 
-.featured-post-wrapper>div:nth-child(1) {
+.latest-post-wrapper>div:nth-child(1) {
     padding: 0px 55px;
     width: 55%;
     height: 100%;
@@ -188,14 +189,14 @@ header ul:nth-child(4) {
     flex-direction: column;
 }
 
-.featured-post-wrapper>div:nth-child(1)>h2 {
+.latest-post-wrapper>div:nth-child(1)>h2 {
     font-weight: 700;
     font-size: 30px;
     line-height: 36px;
     color: #2D3748;
 }
 
-.featured-post-wrapper>div:nth-child(1)>h6 {
+.latest-post-wrapper>div:nth-child(1)>h6 {
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
@@ -203,7 +204,7 @@ header ul:nth-child(4) {
     color: #718096;
 }
 
-.featured-post-wrapper>div:nth-child(1)>div:nth-child(3) {
+.latest-post-wrapper>div:nth-child(1)>div:nth-child(3) {
     display: flex;
     width: 80%;
     justify-content: space-between;
@@ -225,3 +226,48 @@ header ul:nth-child(4) {
     text-decoration: none;
 }
 
+.post-grid {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
+
+.post-grid>.column-post {
+    width: 30%;
+    box-shadow: 0px 4px 4px rgba(192, 189, 189, 0.25);
+    border-radius: 5px;
+}
+
+.post-grid>.column-post>div:nth-child(1) {
+    width: 100%;
+}
+
+
+.post-grid>.column-post>div:nth-child(2) {
+    width: 90%;
+    padding: 0px 15px 20px 15px;
+}
+
+.post-grid .post-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: #2D3748;
+}
+
+.grid-post-cover {
+    width: 100%;
+}
+
+.post-grid .post-meta-data {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.post-grid .post-short {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #718096;
+}
