--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,8 @@ header ul:nth-child(3) {
     padding: 0;
 }
 
-header li {
+header li,
+footer li {
     list-style: none;
 }
 
@@ -95,7 +96,8 @@ header ul:nth-child(3) li a:visited {
     color: var(--e-global-text-color);
 }
 
-header ul:nth-child(4) {
+header ul:nth-child(4),
+footer ul:nth-child(2) {
     width: 10%;
     display: flex;
     align-items: center;
@@ -230,6 +232,7 @@ header ul:nth-child(4) {
     display: flex;
     width: 80%;
     justify-content: space-between;
+    margin-bottom: 45px;
 }
 
 .post-grid>.column-post {
@@ -270,4 +273,108 @@ header ul:nth-child(4) {
     font-size: 14px;
     line-height: 17px;
     color: #718096;
+}
+
+.featured-post-wrapper {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    height: 500px;
+    background-color: #F7FAFC;
+}
+
+.featured-post-wrapper>div:nth-child(1) {
+    height: 60%;
+    width: 55%;
+    padding: 0px 70px;
+}
+
+.featured-post-wrapper>div:nth-child(2) {
+    width: 40%;
+    height: 100%;
+    background-color: beige;
+}
+
+.featured-post-wrapper>div:nth-child(2)>img {
+    width: 100%;
+    height: 100%;
+}
+
+.featured-post-wrapper .featured-post-title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    color: #000000;
+    width: 50%;
+}
+
+.featured-post-wrapper .featured-post-short {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #718096;
+    width: 70%;
+}
+
+.featured-post-wrapper .featured-post-meta-data {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+}
+
+.featured-post-meta-data>div:nth-child(1) {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #4A5568;
+}
+
+.featured-post-meta-data>div:nth-child(2)>a {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+    text-decoration: none;
+}
+
+.read-more-on-blog-btn {
+    background-color: #6B46C1;
+    padding: 10px 12px;
+    border-radius: 5px;
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    margin-left: 72%;
+}
+
+.read-more-on-blog-btn div:nth-child(1) {
+    margin-right: 5px;
+}
+
+/* Footer Style */
+footer {
+    display: flex;
+    width: 80%;
+    height: 80px;
+    display: flex;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: space-between;
+    border-top: 1px solid #E8E8E8;
+}
+
+footer div:nth-child(1) {
+    display: flex;
+    font-size: 16px;
+}
+
+footer div:nth-child(1) h5 {
+    margin-right: 5px;
+}
+
+footer div:nth-child(1) h6 {
+    font-weight: 400;
 }
