--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,3 +378,65 @@ footer div:nth-child(1) h5 {
 footer div:nth-child(1) h6 {
     font-weight: 400;
 }
+
+
+/* Single post styles */
+.single-post-container {
+    width: 80%;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+}
+
+.single-post-content-wrapper {
+    width: 80%;
+    padding: 30px 10%;
+}
+
+.single-post-image-wrapper {
+    height: 400px;
+    background-repeat: none;
+    background-size: cover;
+}
+
+.single-post-header {
+    border-bottom: 1px solid #E8E7E7;
+
+}
+
+.single-post-title {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+    color: #2D3748;
+    padding: 0;
+    margin: 0;
+}
+
+.single-post-meta-data {
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+
+.post-author {
+    margin-right: 10px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #2D3748;
+}
+
+.post-date {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #718096;
+}
+
+.post-content {
+    color: #718096;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+}
