--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,7 @@ footer ul:nth-child(2) {
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
 
 .latest-post-wrapper>div:nth-child(1)>h2 {
@@ -196,6 +197,8 @@ footer ul:nth-child(2) {
     font-size: 30px;
     line-height: 36px;
     color: #2D3748;
+    margin: 0%;
+    padding: 0;
 }
 
 .latest-post-wrapper>div:nth-child(1)>h6 {
@@ -204,6 +207,8 @@ footer ul:nth-child(2) {
     line-height: 17px;
     width: 80%;
     color: #718096;
+    margin: 0;
+    padding: 0;
 }
 
 .latest-post-wrapper>div:nth-child(1)>div:nth-child(3) {
@@ -439,4 +444,29 @@ footer div:nth-child(1) h6 {
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
+}
+
+/* Display Message Style */
+#message-container{
+    padding: 15px 25px;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 15px;
+}
+
+.info-toast{
+    background-color: #2F86EB;
+}
+
+.error-toast{
+    background-color: #FF345B;
+}
+
+.success-toast{
+    background-color: #47D764;
+}
+
+.warning-toast{
+    background-color: #FFC021;
 }
